testsuite/tests/overloadedrecflds/should_fail/DRFPartialFields.stderr

DRFPartialFields.hs:4:17: error: [GHC-82712] [-Wpartial-fields, Werror=partial-fields]
    Definition of partial record field: ‘foo’
    Record selection and update using this field will be partial.
